--- a/includes/style.inc.css
+++ b/includes/style.inc.css
@@ -53,7 +53,7 @@ nav ul  li {
 main {background-color: white; margin: 2rem;
 padding: 2rem; border-radius: 2rem;
 width: fit-content;
-min-width: 50%;}
+}
 
 #signupform input {
     display: block;
