--- a/includes/style.inc.css
+++ b/includes/style.inc.css
@@ -31,12 +31,12 @@ body {
 }
 
 nav {
-    width: 100vw;
+    width: 100vw; 
     background-color: white;
     padding: 1rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: flex !important;
+    justify-content: space-around !important;
+    align-items: center !important;
     
 }
 
